--- a/Revamedia/src/app/Components/profile/profile.component.html
+++ b/Revamedia/src/app/Components/profile/profile.component.html
@@ -41,11 +41,18 @@
     <div class="users-post">
       <div class="post" *ngFor="let post of posts">
         <img *ngIf="post?.image !== null" src="{{ post?.image }}" alt="{{ post?.image }}">
+        <div class="youtube" *ngIf="post?.image === null">
+          <div class="youtube-logo">
+            <img src="../../../assets/youtube-svgrepo-com.svg" alt="Youtube">
+          </div>
+          <a *ngIf="post?.image === null" href="{{post?.youtubeLink}}" target="_blank">{{ post?.youtubeLink }}</a>
+          <p id="post-message" *ngIf="post?.image === null"><span>{{ user?.username }}</span>{{ post?.message }}</p>
+        </div>
         <!-- <span id="profile-post-message" *ngIf="post?.image !== null">{{ post?.message }}</span> -->
       </div>
     </div>
 
-    <div class="shared-youtube-links-container">
+    <!-- <div class="shared-youtube-links-container">
       <div class="youtube-post-wrapper" *ngFor="let post of posts">
         <div class="youtube-post" *ngIf="post?.image === null" id="post-body">
           <div class="youtube-link">
@@ -57,7 +64,7 @@
           <p id="post-message" *ngIf="post?.image === null"><span>{{ user?.username }}</span>{{ post?.message }}</p>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- NO POST AVAILABLE START-->
     <div class="noPost" *ngIf="posts.length == 0">
