--- a/Revamedia/src/app/Components/profile/profile.component.scss
+++ b/Revamedia/src/app/Components/profile/profile.component.scss
@@ -155,15 +155,17 @@ $darkgrey: rgb(61,66,74);
       margin-top: 1rem;
       width: 90%;
       display: grid;
-      grid-template-columns: repeat(3,1fr);
-      grid-column-gap: 3rem;
-      grid-row-gap: 3rem;
+      grid-template-columns: repeat(3, 1fr);
+      grid-column-gap: 2rem;
+      grid-row-gap: 2rem;
 
       // POST START
       .post{
         img{
           border-radius: 6px;
           width: 100%;
+          height: 17rem;
+          object-fit: cover;
           border: 2px solid $orange;
           transition: all 0.3s ease-in-out;
           cursor: pointer;
@@ -176,11 +178,51 @@ $darkgrey: rgb(61,66,74);
           text-align: center;
           color: $darkgrey;
         }
+        .youtube{
+          border-radius: 6px;
+          background: white;
+          width: 100%;
+          height: 17rem;
+          padding:1rem;
+          object-fit: cover;
+          border: 2px solid $orange;
+          transition: all 0.3s ease-in-out;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          cursor: pointer;
+          &:hover{
+            border: 2px solid $blue;
+          }
+          img{
+            width: 5rem;
+            height: 5rem;
+            border: none;
+          }
+          a{
+            font-size: 1.5rem;
+            text-decoration: none;
+            color: $blue;
+            font-weight: normal;
+            &:hover{
+              text-decoration: underline;
+            }
+          }
+          p{
+            font-size: 1.1rem;
+            color: $darkgrey;
+            span{
+              font-weight: 600;
+              margin-right: 1rem;
+            }
+          }
+        }
       }
       // POST END
     }
     // USERS POSTS END
     .shared-youtube-links-container{
+      margin-top: 1rem;
       width: 70%;
       h5{
         width: fit-content;
