--- a/Revamedia/src/app/Components/home/home.component.scss
+++ b/Revamedia/src/app/Components/home/home.component.scss
@@ -282,12 +282,16 @@ $darkgrey: rgb(61, 66, 74);
               }
             }
 
-            a {
+            p {
+              cursor: pointer;
               text-decoration: none;
               color: $darkgrey;
               margin-left: .5rem;
               font-size: 1rem;
               font-weight: 500;
+              &:hover{
+                text-decoration: underline;
+              }
             }
           }
 
@@ -439,6 +443,7 @@ $darkgrey: rgb(61, 66, 74);
             }
 
             .bookmark {
+              opacity: 0;
               #icon {
                 color: $grey;
                 cursor: pointer;
