--- a/Revamedia/src/app/Components/profile/profile.component.scss
+++ b/Revamedia/src/app/Components/profile/profile.component.scss
@@ -189,7 +189,7 @@ $darkgrey: rgb(61,66,74);
           transition: all 0.3s ease-in-out;
           display: flex;
           flex-direction: column;
-          justify-content: space-between;
+          justify-content: space-evenly;
           cursor: pointer;
           &:hover{
             border: 2px solid $blue;
