--- a/Revamedia/src/app/Components/home/home.component.html
+++ b/Revamedia/src/app/Components/home/home.component.html
@@ -83,7 +83,7 @@
         <span (click)="toggleHideComments()" *ngIf="p?.comments.length !== 0" id="viewComments">{{viewComments ? 'Hide Comments' : 'View Comments' }}</span>
 
         <!-- ADD COMMENT -->
-        <div class="add-comment" *ngIf="addComment" id="addCommentReplyForm">
+        <div class="add-comment" *ngIf="addComment" id="addCommentReplyForm{{p?.postId}}">
           <div class="add-comment-header">
             <h5>Add Comment</h5>
             <button title="Close" (click)="closeAddComment()" id="closeModal">X</button>
