--- a/Revamedia/src/app/Components/settings/settings.component.scss
+++ b/Revamedia/src/app/Components/settings/settings.component.scss
@@ -70,6 +70,56 @@ $darkgrey: rgb(61,66,74);
           border-radius: 50%;
         }
       }
+      .user-settings-row-file{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        border-bottom: 1px solid $lightgrey;
+        padding: .75rem 0;
+        .file {
+          opacity: 0;
+          width: 0.1px;
+          height: 0.1px;
+          position: absolute;
+        }
+
+        .file-input label {
+          margin: .5rem 0;
+          display: block;
+          position: relative;
+          height: 2rem;
+          width: 7rem;
+          border-radius: 8px;
+          background: $lightgrey;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          justify-content: center;
+          font-size: .9rem;
+          color: $darkgrey;
+          cursor: pointer;
+          transition: transform .2s ease-out;
+        }
+
+        .file-name {
+          font-size: 0.85rem;
+          color: #555;
+        }
+
+        input:hover+label,
+        input:focus+label {
+          transform: scale(1.02);
+        }
+
+        /* Adding an outline to the label on focus */
+        input:focus+label {
+          outline: 1px solid #000;
+          outline: -webkit-focus-ring-color auto 2px;
+        }
+      }
+
       .user-settings-title{
         width: 100%;
         display: flex;
@@ -169,6 +219,7 @@ $darkgrey: rgb(61,66,74);
             }
           }
           img{
+            margin-left: 1rem;
             width: 12rem;
             height: 12rem;
             object-fit: cover;
