--- a/Revamedia/src/app/Components/profile/profile.component.html
+++ b/Revamedia/src/app/Components/profile/profile.component.html
@@ -40,8 +40,8 @@
     <h4 class="profile-posts-title" id="setBackgroundColor" *ngIf="posts.length != 0">{{ user?.username }}'s Posts</h4>
     <div class="users-post">
       <div class="post" *ngFor="let post of posts">
-        <img *ngIf="post?.image !== ''" src="{{ post?.image }}" alt="{{ post?.image }}">
-        <div class="text-only-post" *ngIf="post?.image === ''">
+        <img *ngIf="post?.image !== '' && post?.youtubeLink === null" src="{{ post?.image }}" alt="{{ post?.image }}">
+        <div class="text-only-post" *ngIf="post?.image === '' && post?.youtubeLink === null">
           <p>{{ post?.message }}</p>
         </div>
         <div class="youtube" *ngIf="post?.image === null">
