--- a/Revamedia/src/app/Components/settings/settings.component.scss
+++ b/Revamedia/src/app/Components/settings/settings.component.scss
@@ -456,7 +456,7 @@ $darkgrey: rgb(61,66,74);
           border: 1px solid $orange;
         }
       }
-      button{
+      .uploadBtn{
         border: none;
         padding: .5rem 1rem;
         border-radius: 4px;
