--- a/Revamedia/src/app/Components/settings/settings.component.html
+++ b/Revamedia/src/app/Components/settings/settings.component.html
@@ -57,13 +57,10 @@
           </span>
         </div>
         <div class="action">
-          <h3 *ngIf="user?.twoFactorAuth == false">Enable</h3>
-          <h3 *ngIf="user?.twoFactorAuth == true">Disable</h3>
-          <button>
-            <fa-icon [icon]="faUserShield" style="margin-right: 1rem;"></fa-icon>
-            <fa-icon (click)="enableTwoFactorAuth()" *ngIf="twoFactor == false" [icon]="faUserShield" size="lg"></fa-icon>
+          <button (click)="enableTwoFactorAuth()" *ngIf="user?.twoFactorAuth == false">
+            Enable
           </button>
-          <button (click)="disableTwoFactorAuth()">
+          <button (click)="disableTwoFactorAuth()" *ngIf="user?.twoFactorAuth == true">
             Disable
           </button>
         </div>
@@ -86,18 +83,18 @@
       <div class="GenerateQrCode" *ngIf="user?.twoFactorAuth == true" id="settingsContainer">
         <div class="title">
           <h5>
-            Generate QrCode
+            Regenerate QrCode
             <fa-icon [icon]="faInfoCircle" (click)="showInfo('generate-code')" id="info-icon"></fa-icon>
           </h5>
         </div>
         <div class="info2" id="generate-code-info">
           <span>
-            Generate a new QrCode for Two-Factor Authentication
+            Regenerate a new QrCode for Two-Factor Authentication
           </span>
         </div>
         <div class="action">
-          <h3>Generate</h3>
-          <button>
+          <h3>Regenerate</h3>
+          <button (click) = "recreateQRCode()">
             <fa-icon [icon]="faRefresh" size="lg"></fa-icon>
           </button>
         </div>
