--- a/Revamedia/src/app/Components/home/home.component.html
+++ b/Revamedia/src/app/Components/home/home.component.html
@@ -83,7 +83,7 @@
         <span (click)="toggleHideComments(p.postId)" *ngIf="p?.comments.length !== 0" id="viewComments">{{viewComments ? 'Hide Comments' : 'View Comments' }}</span>
 
         <!-- ADD COMMENT -->
-        
+
         <div class="add-comment" *ngIf="addComment" id="{{'addCommentReplyForm' + p.postId}}">
           <div class="add-comment-header">
             <h5>Add Comment</h5>
@@ -98,7 +98,7 @@
               <span>Reactions</span>
               <div class="search">
                 <input type="text" id="giphy-search-comment" placeholder="Search GIPHY">
-                <span (click)="searchGiphy()">Search</span>
+                <span (click)="searchGiphyForReply('comment')">Search</span>
               </div>
               <span id="reaction-title">
                 <fa-icon [icon]="faFaceGrinTongueSquint"></fa-icon>
@@ -154,7 +154,7 @@
                   <span>Reactions</span>
                   <div class="search">
                     <input type="text" id="giphy-search-reply" placeholder="Search GIPHY">
-                    <span (click)="searchGiphyForReply()">Search</span>
+                    <span (click)="searchGiphyForReply('reply')">Search</span>
                   </div>
                   <span id="reaction-title">
                     <fa-icon [icon]="faFaceGrinTongueSquint"></fa-icon>
