--- a/Revamedia/src/app/Components/forgot/forgot.component.html
+++ b/Revamedia/src/app/Components/forgot/forgot.component.html
@@ -14,8 +14,7 @@
           name="email"
           id="email"
           placeholder="Enter email..."
-          ngModel
-          pattern="^[a-zA-Z0-9!$]{3,12}@[a-zA-Z0-9]{3,12}.[a-z]{2,3}$">
+          ngModel>
       </div>
       <div class="submit">
         <button type="submit">Submit</button>
