--- a/Revamedia/src/styles.scss
+++ b/Revamedia/src/styles.scss
@@ -175,4 +175,10 @@ $darkgrey: rgb(61,66,74);
       color: white;
     }
   }
+  #add-comment{
+    background-color: rgb(31, 31, 31);
+    h2,span{
+      color: white;
+    }
+  }
 }
