--- a/Revamedia/src/app/Components/home/home.component.html
+++ b/Revamedia/src/app/Components/home/home.component.html
@@ -9,12 +9,9 @@
       </div>
     <!-- post end -->
     <!-- NO POST AVAILABLE START-->
-    <div class="noPost" *ngIf="posts.length == 0">
-      <h1>No Post</h1>
-      <p>Seems like there are no posts available to show</p>
-      <p>Sorry for the inconvience.</p>
-      <span>Be the first to make a post.</span>
-    </div>
+
+
+    <app-no-post [posts]="posts"></app-no-post>
     <!-- NO POST AVAILABLE END-->
   </div>
   <!-- main feed end -->
