--- a/Revamedia/src/app/Components/no-post/no-post.component.html
+++ b/Revamedia/src/app/Components/no-post/no-post.component.html
@@ -1,7 +1,13 @@
-<div class="noPost" *ngIf="posts.length == 0">
-  <h1>No Post</h1>
-  <p>Seems like there are no posts available to show</p>
-  <p>Sorry for the inconvience.</p>
-  <span>Be the first to make a post.</span>
+<div class="home-page" id="home-page">
+  <div class="main" id="main">
+    <div class="noPost" *ngIf="posts.length == 0">
+      <h1>No Post</h1>
+      <p>Seems like there are no posts available to show</p>
+      <p>Sorry for the inconvience.</p>
+      <span>Be the first to make a post.</span>
+    </div>
+  </div>
+
 </div>
+
 
